--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"react-scroll": "^1.9.0",
 		"react-slick": "^0.30.2",
 		"react-toastify": "^10.0.5",
-		"slick-carousel": "^1.8.1"
+		"slick-carousel": "^1.8.1",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
